--- a/My101Romance/Views/Card/GetCard.cshtml
+++ b/My101Romance/Views/Card/GetCard.cshtml
@@ -1,6 +1,11 @@
-@model IEnumerable<My101Romance.Domain.Entity.Card>
+@using My101Romance.Domain.Entity
+@model My101Romance.Domain.Entity.Card
 @{
     ViewBag.Title = "my title";
     Layout = "_Layout";
 }
 
+<p>id: @Model.Id</p>
+<p>title: @Model.Title</p>
+<p>Desc: @Model.Description</p>
+<p>RAting: @Model.Rating</p>
