--- a/My101Romance/Views/Home/Index.cshtml
+++ b/My101Romance/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
-﻿@{
+﻿@*{
     ViewData["Title"] = "Home Page";
-}
+}*@
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1></div>
+    <h2 class="display-4">Welcome</h2>
+ 
+
+</div>
