--- a/My101Romance/Views/Shared/Partial/MetatagsPartial.cshtml
+++ b/My101Romance/Views/Shared/Partial/MetatagsPartial.cshtml
@@ -1,3 +1,4 @@
+@using My101Romance.Services
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 @if (ViewBag.Title != null)
@@ -6,7 +7,7 @@
 }
 else
 {
-    <title>My101Romance</title>
+    <title>@Config.ProjectName</title>
 }
 
 @if (ViewBag.Description != null)
