--- a/My101Romance/Views/Home/Index.cshtml
+++ b/My101Romance/Views/Home/Index.cshtml
@@ -3,7 +3,11 @@
 }*@
 
 <div class="text-center">
-    <h2 class="display-4">Welcome</h2>
+    
+    @for (int i = 0; i < 20; i++)
+    {
+        <h2 class="display-4">Welcome</h2>
+    }
  
 
 </div>
