--- a/My101Romance/Views/Card/GetCards.cshtml
+++ b/My101Romance/Views/Card/GetCards.cshtml
@@ -10,7 +10,9 @@
         @if (true)
         {
             
+            <p>@card.Title</p>
             <p>@card.Description</p>
+            
         }
         <hr/>
     }
