--- a/My101Romance/Views/Shared/Partial/HeaderPartial.cshtml
+++ b/My101Romance/Views/Shared/Partial/HeaderPartial.cshtml
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FFC0CB;">
   <div class="container-fluid justify-content-center p-0">
     <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="favicon.ico" alt="Іконка" class="img-fluid" style="width: 40px; height: 40px;">
+      <img src="/favicon.ico" alt="favicon" class="img-fluid" style="width: 40px; height: 40px;">
       <span class="d-lg-inline d-none ml-2">@Config.ProjectName</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,14 +12,18 @@
     <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
       <ul class="navbar-nav text-center">
         <li class="nav-item">
-          <a class="nav-link font-weight-bold" href="#">Головна</a>
+          <a class="nav-link font-weight-bold" href="/">Головна</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link font-weight-bold" href="#">Рейтинг</a>
+          <a class="nav-link font-weight-bold" href="../../Card/Top#">Рейтинг</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link font-weight-bold" href="#">Гра</a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link font-weight-bold" href="/Card/ShowRandomCards">Випадкові картки</a>
+        </li>
+                
       </ul>
       <div class="ml-lg-2 mr-lg-2 ml-0 mr-0 mb-2 mb-lg-0 text-center">
         <!-- Добавлены классы "mx-auto" и "w-75" для центрирования и задания ширины кнопке -->
