--- a/My101Romance/Views/Account/Login.cshtml
+++ b/My101Romance/Views/Account/Login.cshtml
@@ -1,1 +1,31 @@
-<h1>Login page</h1>
+@model My101Romance.Domain.ViewModels.Login.LoginViewModel
+
+@{
+    ViewData["Title"] = "Login";
+}
+
+<div class="container">
+    <div class="row justify-content-center mt-5">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">Login</div>
+                <div class="card-body">
+                    <form asp-action="Login" method="post">
+                        <div class="form-group">
+                            <label asp-for="Email">Email</label>
+                            <input asp-for="Email" class="form-control" placeholder="Enter your email" required>
+                            <span asp-validation-for="Email" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Pwd">Password</label>
+                            <input asp-for="Pwd" type="password" class="form-control" placeholder="Enter your password" required>
+                            <span asp-validation-for="Pwd" class="text-danger"></span>
+                        </div>
+                        <br/>
+                        <button type="submit" class="btn btn-primary">Login</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
