--- a/My101Romance/Views/Card/top/Top18Plus.cshtml
+++ b/My101Romance/Views/Card/top/Top18Plus.cshtml
@@ -1,25 +1,22 @@
 @model IEnumerable<My101Romance.Domain.Entity.Card>
 
-<h1 class="text-center">Random Cards</h1>
-
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row">
         @foreach (var card in Model)
         {
-            <div class="col-md-4">
+            <div class="col-md-12 my-3">
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <img src="@card.ImagePath" alt="Front Image" style="width:300px;height:200px;">
                         </div>
                         <div class="flip-card-back">
-                            <h1>@card.Id @card.Title</h1>
+                            <h1>@card.Title</h1>
                             <p>@card.Description</p>
                         </div>
                     </div>
                 </div>
 
-   
             </div>
         }
     </div>
