--- a/My101Romance/Views/Shared/Partial/HeaderPartial.cshtml
+++ b/My101Romance/Views/Shared/Partial/HeaderPartial.cshtml
@@ -22,7 +22,7 @@
           <a class="nav-link font-weight-bold" href="../../Card/Top">Рейтинг</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link font-weight-bold" href="#">Гра</a>
+          <a class="nav-link font-weight-bold" href="/GameInfo">Гра</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link font-weight-bold" href="/Card/ShowRandomCards">Випадкові картки</a>
@@ -32,7 +32,7 @@
       @if (path == "/Account/Login")
       {
         <div class="ml-lg-2 mr-lg-2 ml-0 mr-0 mb-2 mb-lg-0 text-center" style="margin-right: 5%">
-          :)
+          
         </div>
       }
       else
