--- a/My101Romance/Views/Account/auth/Login.cshtml
+++ b/My101Romance/Views/Account/auth/Login.cshtml
@@ -17,9 +17,9 @@
                             <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="Pwd">Password</label>
-                            <input asp-for="Pwd" type="password" class="form-control" placeholder="Enter your password" required>
-                            <span asp-validation-for="Pwd" class="text-danger"></span>
+                            <label asp-for="Password">Password</label>
+                            <input asp-for="Password" type="password" class="form-control" placeholder="Enter your password" required>
+                            <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
                         <br/>
                         <button type="submit" class="btn btn-primary">Login</button>
