--- a/My101Romance/Views/Account/dev/AddUser.cshtml
+++ b/My101Romance/Views/Account/dev/AddUser.cshtml
@@ -4,4 +4,4 @@
 <p>id: @Model.Id</p>
 <p>Username: @Model.UserName</p>
 <p>mail: @Model.Email</p>
-<p>pwd: @Model.Pwd</p>
+<p>pwd: @Model.Password</p>
