--- a/My101Romance/Views/Account/auth/Register.cshtml
+++ b/My101Romance/Views/Account/auth/Register.cshtml
@@ -1,7 +1,7 @@
 @model My101Romance.Domain.ViewModels.Register.RegisterViewModel
 
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "New User ^_^";
 }
 
 <div class="container">
@@ -10,7 +10,12 @@
             <div class="card">
                 <div class="card-header">Register</div>
                 <div class="card-body">
-                    <form asp-action="Register" method="post">
+                    <form asp-action="Register" method="post" asp-validation-summary="All">
+                        <div class="form-group">
+                            <label asp-for="UserName">Username</label>
+                            <input asp-for="UserName" class="form-control" placeholder="Enter your username" required>
+                            <span asp-validation-for="UserName" class="text-danger"></span>
+                        </div>
                         <div class="form-group">
                             <label asp-for="Email">Email</label>
                             <input asp-for="Email" class="form-control" placeholder="Enter your email" required>
