--- a/My101Romance/Views/Shared/Partial/CssPartial.cshtml
+++ b/My101Romance/Views/Shared/Partial/CssPartial.cshtml
@@ -1,4 +1,8 @@
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
 <link rel="stylesheet" href="~/css/main.css" asp-append-version="true"/>
 <link rel="stylesheet" href="~/css/card-style.css" asp-append-version="true"/>
+<link rel="stylesheet" href="css/animate.css" asp-append-version="true"/>
 <link rel="stylesheet" href="~/My101Romance.styles.css" asp-append-version="true"/>
+
+<!-- Подключаем Animate.css -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
