--- a/My101Romance/Views/Shared/Partial/MetatagsPartial.cshtml
+++ b/My101Romance/Views/Shared/Partial/MetatagsPartial.cshtml
@@ -1,21 +1,29 @@
 @using My101Romance.Services
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-@if (ViewBag.Title != null)
+
+@if (User.IsInRole("Admin"))
 {
-    <title>@ViewBag.Title</title>
+<title>admin</title>
 }
 else
 {
-    <title>@Config.ProjectName</title>
+if (ViewBag.Title != null)
+{
+<title>@ViewBag.Title</title>
+}
+else
+{
+<title>@Config.ProjectName</title>
+}
 }
 
 @if (ViewBag.Description != null)
 {
-    <meta name="description" content="@ViewBag.Description" />
+<meta name="description" content="@ViewBag.Description" />
 }
 
 @if (ViewBag.Keywords != null)
 {
-    <meta name="keywords" content="@ViewBag.Keywords" />
+<meta name="keywords" content="@ViewBag.Keywords" />
 }
