--- a/My101Romance/Views/Account/auth/Register.cshtml
+++ b/My101Romance/Views/Account/auth/Register.cshtml
@@ -1,7 +1,7 @@
 @model My101Romance.Domain.ViewModels.Register.RegisterViewModel
 
 @{
-    ViewData["Title"] = "New User";
+ViewData["Title"] = "New User";
 }
 
 <div class="container">
@@ -33,16 +33,17 @@
                             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                         </div>
                         <br/>
-                        
+
                         @* Вывод общих ошибок *@
                         <div asp-validation-summary="All" class="text-danger"></div>
 
                         <br/>
                         <button type="submit" class="btn btn-primary">Register</button>
-
-
                     </form>
                     <br/>
+                    <div class="text-center">
+                        <p>Already have an account? <a href="/login">Login here</a></p>
+                    </div>
                 </div>
             </div>
         </div>
