--- a/My101Romance/Views/Card/ShowRandomCards.cshtml
+++ b/My101Romance/Views/Card/ShowRandomCards.cshtml
@@ -3,24 +3,28 @@
 <h1 class="text-center">Random Cards</h1>
 
 <div class="container">
-    <div class="row justify-content-center">
+    <div class="row justify-content-center" id="cardsContainer">
         @foreach (var card in Model)
         {
-            <div class="col-md-4">
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <img src="@card.ImagePath" alt="Front Image" style="width:300px;height:200px;">
-                        </div>
-                        <div class="flip-card-back">
-                            <h1>@card.Id @card.Title</h1>
-                            <p>@card.Description</p>
-                        </div>
+        <div class="card mb-3" style="max-width: 540px;">
+            <div class="row no-gutters">
+                <div class="col-md-4">
+                    <img src="@card.ImagePath" class="card-img" alt="card">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h3 class="card-title">@card.Title</h3>
+                        <p class="card-text">@card.Description</p>
+                        @if (User.IsInRole("Admin"))
+                        {
+                        <p>ID: @card.Id</p>
+                        <p>Rating: @card.Rating</p>
+                        }
                     </div>
                 </div>
-
-   
             </div>
+        </div>
         }
     </div>
 </div>
+
