--- a/My101Romance/Views/Card/top/Top.cshtml
+++ b/My101Romance/Views/Card/top/Top.cshtml
@@ -1,17 +1,26 @@
-@model IEnumerable<My101Romance.Domain.Entity.Card>
+@model List<My101Romance.Domain.Entity.Card>
+
 <div class="container">
+    <h1>Top Cards</h1>
     <div class="row">
-        @foreach (var card in Model)
+        @foreach (var (card, index) in Model.Select((item, index) => (item, index)))
         {
-            <div class="row justify-content-center my-3"> <!-- Добавлены классы для сетки и отступа между карточками -->
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <img src="@card.ImagePath" alt="Front Image" style="width:300px;height:200px;">
+            <div class="col-lg-6 col-md-12 mb-3">
+                <div class="card" style="max-width: 540px;">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                            <img src="@card.ImagePath" class="card-img" alt="card">
                         </div>
-                        <div class="flip-card-back">
-                            <h1>@card.Title</h1>
-                            <p>@card.Description</p>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h3 class="card-title">Card @(index + 1): @card.Title</h3>
+                                <p class="card-text">@card.Description</p>
+                                @if (User.IsInRole("Admin"))
+                                {
+                                    <p>ID: @card.Id</p>
+                                    <p>Rating: @card.Rating</p>
+                                }
+                            </div>
                         </div>
                     </div>
                 </div>
