--- a/My101Romance/Views/Card/top/Top18Plus.cshtml
+++ b/My101Romance/Views/Card/top/Top18Plus.cshtml
@@ -1,23 +1,31 @@
 @model IEnumerable<My101Romance.Domain.Entity.Card>
 
+
 <div class="container">
+    <h1 class="text-center">Top Cards</h1>
     <div class="row">
-        @foreach (var card in Model)
+        @foreach (var (card, index) in Model.Select((item, index) => (item, index)))
         {
-            <div class="col-md-12 my-3">
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <img src="@card.ImagePath" alt="Front Image" style="width:300px;height:200px;">
-                        </div>
-                        <div class="flip-card-back">
-                            <h1>@card.Title</h1>
-                            <p>@card.Description</p>
+        <div class="col-lg-6 col-md-12 mb-3">
+            <div class="card" style="max-width: 540px;">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="@card.ImagePath" class="card-img" alt="card">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h3 class="card-title">Card @(index + 1): @card.Title</h3>
+                            <p class="card-text">@card.Description</p>
+                            @if (User.IsInRole("Admin"))
+                            {
+                            <p>ID: @card.Id</p>
+                            <p>Rating: @card.Rating</p>
+                            }
                         </div>
                     </div>
                 </div>
-
             </div>
+        </div>
         }
     </div>
 </div>
