--- a/My101Romance/Views/Shared/Partial/HeaderPartial.cshtml
+++ b/My101Romance/Views/Shared/Partial/HeaderPartial.cshtml
@@ -1,4 +1,6 @@
-
+@using Microsoft.AspNetCore.Identity;
+@using My101Romance.Domain.Entity
+@inject SignInManager<AppUser> SignInManager;
 @using My101Romance.Services
 
 
@@ -7,48 +9,58 @@
 }
 
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FFC0CB;">
-  <div class="container-fluid justify-content-center p-0">
-    <a class="navbar-brand d-flex align-items-center" href="#">
-      <img src="/favicon.ico" alt="favicon" class="img-fluid" style="width: 40px; height: 40px;">
-      <span class="d-lg-inline d-none ml-2">@Config.ProjectName</span>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-      <ul class="navbar-nav text-center">
-        <li class="nav-item">
-          <a class="nav-link font-weight-bold" href="/">Головна</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link font-weight-bold" href="../../Card/Top">Рейтинг</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link font-weight-bold" href="/GameInfo">Гра</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link font-weight-bold" href="/Card/ShowRandomCards">Випадкові картки</a>
-        </li>
-                
-      </ul>
-      @if (path == "/Account/Login")
-      {
-        <div class="ml-lg-2 mr-lg-2 ml-0 mr-0 mb-2 mb-lg-0 text-center" style="margin-right: 5%">
-          
-        </div>
-      }
-      else
-      {
-        <div class="ml-lg-2 mr-lg-2 ml-0 mr-0 mb-2 mb-lg-0 text-center">
-          <!-- Добавлены классы "mx-auto" и "w-75" для центрирования и задания ширины кнопке -->
-          <button onclick="location.href='/Account/Login'" class="btn btn-light d-lg-inline d-none mx-auto w-75" type="button">log in / sing in</button>
-          <button onclick="location.href='/Account/Login'" class="btn btn-light d-lg-none btn-block mx-auto w-75" type="button">log in / sing in</button>
-        </div>
-      }
+    <div class="container-fluid justify-content-center p-0">
+        <a class="navbar-brand d-flex align-items-center" href="/">
+            <img src="/favicon.ico" alt="favicon" class="img-fluid" style="width: 40px; height: 40px;">
+            <span class="d-lg-inline d-none ml-2">@Config.ProjectName</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+            <ul class="navbar-nav text-center">
+                <li class="nav-item">
+                    <a class="nav-link font-weight-bold font-size-lg @((path == "/") ? "active" : "")" href="/">Головна</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link font-weight-bold font-size-lg @((path.Contains("/Card/Top")) ? "active" : "")" href="/Top">Рейтинг</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link font-weight-bold font-size-lg @((path == "/quiz") ? "active" : "")" href="/quiz">Гра</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link font-weight-bold font-size-lg @((path == "/random") ? "active" : "")" href="/random">Випадкові картки</a>
+                </li>
+                @if (User.IsInRole("admin") || User.IsInRole("root"))
+                {
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Адмін
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="adminDropdown">
+                            <a class="dropdown-item" href="/admin/addrole">Add Role</a>
+                            <a class="dropdown-item" href="/admin/rolelist">Role List</a>
 
 
-      
-      
+                        </div>
+                    </li>
+                }
+            </ul>
+
+            <div class="nav-item text-center">
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    <span class="nav-link font-weight-bold text-dark">@User.Identity.Name</span>
+                    <form asp-action="Logout" asp-controller="Account" method="post" class="d-inline">
+                        <button type="submit" class="btn btn-danger">Logout</button>
+                    </form>
+                }
+                else
+                {
+                    <a href="login" class="d-lg-inline d-none w-75 font-weight-bold text-white" style="background-color: #007bff;  border-radius: 5px;">Login</a>
+                    <a href="login" class="d-lg-none btn-block w-75 font-weight-bold text-white" style="background-color: #007bff;  border-radius: 5px;">Login</a>
+                }
+            </div>
+        </div>
     </div>
-  </div>
 </nav>
