--- a/My101Romance/Views/Account/auth/Login.cshtml
+++ b/My101Romance/Views/Account/auth/Login.cshtml
@@ -21,7 +21,7 @@ ViewData["Title"] = "Login";
                             <input asp-for="Password" type="password" class="form-control" placeholder="Enter your password" required>
                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
-                        <!--<div class="alert alert-danger" role="alert" asp-validation-summary="All"></div>  Уведомление об ошибке -->
+                        <!--<div class="alert alert-danger" role="alert" asp-validation-summary="All"></div>  У -->
                         <br/>
                         <button type="submit" class="btn btn-primary">Login</button>
                     </form>
