--- a/My101Romance/Views/Shared/Partial/HeaderPartial.cshtml
+++ b/My101Romance/Views/Shared/Partial/HeaderPartial.cshtml
@@ -34,7 +34,9 @@
                 @if (User.IsInRole("admin") || User.IsInRole("root"))
                 {
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" 
+                           id="adminDropdown" role="button" data-toggle="dropdown" 
+                           aria-haspopup="true" aria-expanded="false">
                             Адмін
                         </a>
                         <div class="dropdown-menu" aria-labelledby="adminDropdown">
