--- a/My101Romance/Views/Quiz/game/Quiz.cshtml
+++ b/My101Romance/Views/Quiz/game/Quiz.cshtml
@@ -1,6 +1,6 @@
 @model List<My101Romance.Domain.Entity.Card>
 
-<h1>Eight Cards</h1>
+<h1 class="text-center">Оберіть одну з карток</h1>
 
 <br />
 <div class="row justify-content-center" id="cardsContainer">
