--- a/My101Romance/Views/Card/top/Top.cshtml
+++ b/My101Romance/Views/Card/top/Top.cshtml
@@ -1,7 +1,7 @@
 @model List<My101Romance.Domain.Entity.Card>
 
 <div class="container">
-    <h1>Top Cards</h1>
+    <h1>Рейтинг карток</h1>
     <div class="row">
         @foreach (var (card, index) in Model.Select((item, index) => (item, index)))
         {
@@ -15,7 +15,7 @@
                             <div class="card-body">
                                 <h3 class="card-title">Card @(index + 1): @card.Title</h3>
                                 <p class="card-text">@card.Description</p>
-                                @if (User.IsInRole("Admin"))
+                                @if (User.IsInRole("admin"))
                                 {
                                     <p>ID: @card.Id</p>
                                     <p>Rating: @card.Rating</p>
